opam-version: "2.0"
maintainer: "pablo.donato@tuta.io"

homepage: "https://github.com/Champitoad"
dev-repo: "git+https://github.com/Champitoad/coq-actema"
bug-reports: "https://github.com/Champitoad/coq-actema/issues"
doc: "https://actema.xyz/about"
# license: "MIT"

synopsis: "Integrating the Actema GUI as a tactic."
# description: """
# Longer description of what your plugin does that can
# cover multiple lines. Including punctuation."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "2.5"}
  "ocamlformat" { >= "0.25.1" }
  "coq" {>= "8.15" & < "8.16"}
  "coq-mathcomp-ssreflect" {= "1.16.0"}
  "cohttp-lwt-unix" { = "5.0.0"}
  "sha" { = "1.15.2"}
  "qcheck-core" { >= "0.21.3"}
]

tags: [
  "category:Miscellaneous/Coq Extensions"
  "keyword:GUI"
  "logpath:Actema"
]

authors: [
  "Pablo Donato"
  "Benjamin Werner"
]
