(library
 (name actema_plugin)
 (public_name coq-actema.plugin)
 (synopsis "Thin wrapper around the plugin")
 (flags :standard -rectypes -w -27) ; Coq requires the `-rectypes`
 (libraries
  coq-core.plugins.ltac
  coq-core.tactics
  cohttp-lwt-unix
  sha
  coq-actema.api))

; This will let Dune know about Coq's .mlg grammar files.

(coq.pp
 (modules g_actema))
