(library
 (name actema_plugin)
 (public_name coq-actema.plugin)
 (synopsis "Thin wrapper around the plugin")
 (libraries
  coq-core.plugins.ltac
  coq-core.tactics
  cohttp-lwt-unix
  sha
  coq-actema.api
  coq-actema.utils)
 (preprocess
  (pps ppx_deriving.show)))

; This will let Dune know about Coq's .mlg grammar files.

(coq.pp
 (modules g_actema))
