(include_subdirs no)

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain --inspection --table --dump))

(library
 (name prover)
 (public_name coq-actema.prover)
 (libraries
  coq-actema.api
  lwt
  menhirLib
  batteries.unthreaded
  tyxml
  js_of_ocaml
  ocamlgraph
  base64)
 (preprocess
  (pps tyxml-ppx js_of_ocaml-ppx lwt_ppx ppx_deriving.show))
 (synopsis "Mini-prover (backend for the GUI)"))
