(include_subdirs no)

(library
 (name prover)
 (public_name coq-actema.prover)
 (libraries
  coq-actema.api-new
  lwt
  menhirLib
  batteries.unthreaded
  tyxml
  js_of_ocaml
  ocamlgraph
  base64)
 (preprocess
  (pps tyxml-ppx js_of_ocaml-ppx lwt_ppx ppx_deriving.show))
 (synopsis "Mini-prover (backend for the GUI)"))
