(include_subdirs no)

(library
 (name prover)
 (public_name coq-actema.prover)
 (libraries
  coq-actema.api
  coq-actema.utils
  lwt
  menhirLib
  tyxml
  js_of_ocaml
  ocamlgraph
  base64
  qcheck-core
  qcheck-alcotest)
 (preprocess
  (pps tyxml-ppx js_of_ocaml-ppx lwt_ppx ppx_deriving.show))
 (synopsis "Mini-prover (backend for the GUI)")
 (flags
  (:standard -w -37)))
