(library
 (name actema_plugin)
 (public_name coq-actema.plugin)
 (synopsis "Integrating the Actema GUI as a tactic.")
 (flags :standard -rectypes) ; Coq requires the `-rectypes`
 (libraries coq-core.plugins.ltac atdgen cohttp-lwt-unix sha))

(coq.pp (modules g_actema))

(env
  (dev
    (flags (:standard -warn-error -A))))
