(lang dune 1.11)

(using menhir 2.0)

(name prover)

(generate_opam_files true)

(license CeCILL-B)

(authors "Pierre-Yves Strub <pierre-yves@strub.nu>")

(maintainers "pierre-yves@strub.nu")

(homepage "https://gitlab.com/prover-ui/prover")

(bug_reports "https://gitlab.com/prover-ui/prover/issues")

(source
 (uri "git+https://gitlab.com/prover-ui/prover.git"))

(package
 (name prover)
 (synopsis "A simple prover")
 (depends
  (dune
   (>= 1.11))
  (batteries
   (>= 2.8))
  (ocamlfind
   (>= 1.8))
  (tyxml
   (>= 4.0))
  (tyxml-ppx
   (>= 4.0))
  (js_of_ocaml
   (>= 3.4))
  (js_of_ocaml-ppx
   (>= 3.4))
  (js_of_ocaml-lwt
   (>= 3.4))
  (js_of_ocaml-compiler
   (>= 3.4))
  (lwt
   (>= 4.3))
  (lwt_ppx
   (>= 1.2))
  (menhir
   (>= 20181113))
  (ocamlgraph
   (>= 1.8))
  (yojson
   (>= 1.7))
  (atdgen
   (>= 2.10.0))
  (base64
   (>= 3.5.0))))
