(lang dune 3.7)

(using menhir 2.0)

(name prover)

(generate_opam_files true)

(license CeCILL-B)

(authors
 "Pierre-Yves Strub <pierre-yves@strub.nu>, Mathis Bouverot-Dupuis <mathis.bouverot@ens.psl.eu>")

(maintainers "pierre-yves@strub.nu" , "mathis.bouverot@ens.psl.eu")

(homepage "https://github.com/Champitoad/coq-actema")

(bug_reports "https://github.com/Champitoad/coq-actema/issues")

(source
 (uri "git+https://github.com/Champitoad/coq-actema.git"))

(package
 (name prover)
 (synopsis "A simple prover")
 (depends
  (batteries
   (>= 2.8))
  (ocamlfind
   (>= 1.8))
  (tyxml
   (>= 4.0))
  (tyxml-ppx
   (>= 4.0))
  (js_of_ocaml
   (>= 3.4))
  (js_of_ocaml-ppx
   (>= 3.4))
  (js_of_ocaml-lwt
   (>= 3.4))
  (js_of_ocaml-compiler
   (>= 3.4))
  (lwt
   (>= 4.3))
  (lwt_ppx
   (>= 1.2))
  (menhir
   (>= 20181113))
  (ocamlgraph
   (>= 1.8))
  (yojson
   (>= 1.7))
  (atdgen
   (>= 2.10.0))
  (ocamlformat
   (>= 0.25.1))
  (base64
   (>= 3.5.0))))
