(ocamllex lexer)

(menhir
  (modules parser)
  (flags --explain --inspection --table --dump))

(library
  (name engine)
  (public_name prover.engine)
  (libraries lwt menhirLib batteries tyxml js_of_ocaml ocamlgraph base64 api)
  (preprocess (pps tyxml-ppx js_of_ocaml-ppx lwt_ppx))
  (synopsis "Mini-prover (engine library)")
;  (flags -w -8)
  )
