; This was a nightmare to get working. Edit at your own risk !

; This dune file handles the generation of prover.js,
; which will later be copied to frontend/public (see the Makefile at the root).

; I notably had errors with the caml/threads library, which doesn't seem to work 
; in combination with js_of_ocaml. I thus had to use batteries.unthreaded instead of batteries.

(executables
 (names jsprover)
 (public_names -)
 (libraries coq-actema.prover coq-actema.api js_of_ocaml)
 (package coq-actema)
 (modes js byte)
 (preprocess
  (pps js_of_ocaml-ppx lwt_ppx ppx_deriving.show)))

; The next two rules seem to be quite fragile w.r.t dune's file naming conventions.

(rule
 (target jsprover.js.bc)
 (deps
  (file jsprover.bc))
 (action
  (run
   ocamlfind
   ocamlc
   -g
   -o
   jsprover.js.bc
   -package
   menhirLib,batteries.unthreaded,tyxml,lwt,ocamlgraph,js_of_ocaml,base64
   -linkpkg
   ../../api/api.cma
   -linkpkg
   ../../prover/prover.cma
   .jsprover.eobjs/byte/dune__exe__Jsprover.cmo)))

(rule
 (target jsprover.js)
 (deps
  (file jsprover.js.bc))
 (action
  (run
   %{bin:js_of_ocaml}
   --disable
   genprim
   --pretty
   --debug-info
   --source-map
   --source-map-inline
   --no-inline
   -o
   %{target}
   %{deps})))
