(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain --inspection --table --dump))

(include_subdirs unqualified)

(library
 (name engine)
 (public_name prover.engine)
 (libraries
  prover.api
  lwt
  menhirLib
  batteries
  tyxml
  js_of_ocaml
  ocamlgraph
  base64)
 (preprocess
  (pps tyxml-ppx js_of_ocaml-ppx lwt_ppx))
 (synopsis "Mini-prover (engine library)"))
